corpus/c/asm_inline/case-01/snapshots/gcc15_plus/dual_sink_structured/render.concise.txt
error: [syntax] inline assembly constraint error @ src/main.c:3:5
help: check the asm constraint letters and ensure registers/operands match the template
raw : impossible constraint in ‘asm’
| src/main.c:3:5
|     __asm__("" : : "i"(value));
|     ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output